package edu.hitsz.Observer;

public interface Subscriber {

    void bombWork();
}
